chore: update tests with rpc clients
Refs: XRDDEV-2673